--- a/src/public/libraries/css/style.css
+++ b/src/public/libraries/css/style.css
@@ -823,6 +823,7 @@ label:focus,
   color: #1a1a1a;
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 600;
+  display: block;
 }
 
 .left .people .person .time {
